--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -59,6 +59,7 @@ include_directories(../LocationSync
         ../DeviceInfo
         ../helpers
         ../SystemServices
+        ../HdmiInput
         )
 link_directories(../LocationSync
         ../PersistentStore
@@ -76,6 +77,7 @@ link_directories(../LocationSync
         ../UserPreferences
         ../Messenger
         ../DeviceInfo
+        ../HdmiInput
         )
 
 target_link_libraries(${PROJECT_NAME}
@@ -97,6 +99,7 @@ target_link_libraries(${PROJECT_NAME}
         ${NAMESPACE}UserPreferences
         ${NAMESPACE}Messenger
         ${NAMESPACE}DeviceInfo
+        ${NAMESPACE}HdmiInput
         )
 
 target_include_directories(${PROJECT_NAME}
