RDK-37900 : Unit Tests for HdcpProfile and HdmiInput profiles.
RDK-37900 : Unit Tests for HdcpProfile and HdmiInput profiles.

Signed-off-by: Rajnish Dey <Rajnish_Dey4@comcast.com>

RDK-37900 : Address review comment for HdmiInput profile.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -187,6 +187,8 @@ jobs:
           -DPLUGIN_DEVICEINFO=ON
           -DPLUGIN_SYSTEMSERVICES=ON
           -DRDK_SERVICES_TEST=ON
+          -DPLUGIN_HDMIINPUT=ON
+          -DPLUGIN_HDCPPROFILE=ON
           -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build rdkservices
