--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -59,6 +59,8 @@ include_directories(../LocationSync
         ../DeviceInfo
         ../helpers
         ../SystemServices
+        ../HdmiInput
+        ../HdcpProfile
         )
 link_directories(../LocationSync
         ../PersistentStore
@@ -76,6 +78,8 @@ link_directories(../LocationSync
         ../UserPreferences
         ../Messenger
         ../DeviceInfo
+        ../HdmiInput
+        ../HdcpProfile
         )
 
 target_link_libraries(${PROJECT_NAME}
@@ -97,6 +101,8 @@ target_link_libraries(${PROJECT_NAME}
         ${NAMESPACE}UserPreferences
         ${NAMESPACE}Messenger
         ${NAMESPACE}DeviceInfo
+        ${NAMESPACE}HdmiInput
+        ${NAMESPACE}HdcpProfile
         )
 
 target_include_directories(${PROJECT_NAME}
