--- a/DisplayInfo/CMakeLists.txt
+++ b/DisplayInfo/CMakeLists.txt
@@ -28,7 +28,7 @@ find_package(CompileSettingsDebug CONFIG REQUIRED)
 find_package(BCM_HOST QUIET)
 find_package(NEXUS QUIET)
 find_package(NXCLIENT QUIET)
-find_package(DRM)
+find_package(DRM QUIET)
 find_path (STAGING_INCDIR glib-2.0)
 include_directories(include)
 include_directories(${STAGING_INCDIR})
@@ -57,8 +57,8 @@ if (PLUGIN_DISPLAYINFO_BCM_VERSION_MAJOR)
 endif()
 
 if (USE_DEVICESETTINGS)
-    find_package(DS REQUIRED)
-    find_package(IARMBus REQUIRED)
+    find_package(DS)
+    find_package(IARMBus)
     target_include_directories(${MODULE_NAME} PRIVATE ${IARMBUS_INCLUDE_DIRS}
         ${DS_INCLUDE_DIRS}
         ../helpers)
