--- a/DisplayInfo/CMakeLists.txt
+++ b/DisplayInfo/CMakeLists.txt
@@ -42,6 +42,8 @@ set_target_properties(${MODULE_NAME} PROPERTIES
         CXX_STANDARD 11
         CXX_STANDARD_REQUIRED YES)
 
+set_source_files_properties(DeviceSettings/PlatformImplementation.cpp PROPERTIES COMPILE_FLAGS "-fexceptions")
+
 target_compile_definitions(${MODULE_NAME} PRIVATE MODULE_NAME=Plugin_${PLUGIN_NAME})
 
 target_link_libraries(${MODULE_NAME}
