--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,16 +3,12 @@ name: unit-tests
 on:
   push:
     branches: [ main, 'sprint/**', 'release/**' ]
-
   pull_request:
-    # By default: opened, synchronize, or reopened.
     branches: [ main, 'sprint/**', 'release/**' ]
 
 env:
   BUILD_TYPE: Debug
-
-  # Refs for 22Q4_sprint
-  THUNDER_REF: "R2-v1.12"
+  THUNDER_REF: "a87b48eca1e76c3e6f03d689e6302b1fb090b52c"
   INTERFACES_REF: "f61d710cc51628819d0fd80b8cc65e55eeec12b4"
 
 jobs:
@@ -58,24 +54,25 @@ jobs:
       - run: pip install jsonref
 
       - name: Set up CMake
-        # 3.16.x To support flow control commands to be overridden.
-        # Installs in: find /opt -ipath *bin/cmake
         uses: jwlawson/actions-setup-cmake@v1.13
         with:
           cmake-version: '3.16.x'
 
       - name: Install packages
-        run: sudo apt update && sudo apt install -y libsqlite3-dev libcurl4-openssl-dev
+        run: >
+          sudo apt update
+          &&
+          sudo apt install -y libsqlite3-dev libcurl4-openssl-dev valgrind lcov
 
       - name: Checkout Thunder
         if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.2.0
         with:
           repository: rdkcentral/Thunder
           path: Thunder
           ref: ${{env.THUNDER_REF}}
 
-      - name: Configure ThunderTools
+      - name: Build Thunder
         if: steps.cache.outputs.cache-hit != 'true'
         run: >
           cmake
@@ -84,18 +81,11 @@ jobs:
           -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/install/usr"
           -DCMAKE_MODULE_PATH="${{github.workspace}}/install/tools/cmake"
           -DGENERIC_CMAKE_MODULE_PATH="${{github.workspace}}/install/tools/cmake"
-
-      - name: Build ThunderTools
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --build build/ThunderTools -j8
-
-      - name: Install ThunderTools
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --install build/ThunderTools
-
-      - name: Configure Thunder
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: >
+          &&
+          cmake --build build/ThunderTools -j8
+          &&
+          cmake --install build/ThunderTools
+          &&
           cmake
           -S "${{github.workspace}}/Thunder"
           -B build/Thunder
@@ -104,24 +94,20 @@ jobs:
           -DBUILD_TYPE=${{env.BUILD_TYPE}}
           -DBINDING=127.0.0.1
           -DPORT=55555
-
-      - name: Build Thunder
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --build build/Thunder -j8
-
-      - name: Install Thunder
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --install build/Thunder
+          &&
+          cmake --build build/Thunder -j8
+          &&
+          cmake --install build/Thunder
 
       - name: Checkout ThunderInterfaces
         if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.2.0
         with:
           repository: rdkcentral/ThunderInterfaces
           path: ThunderInterfaces
           ref: ${{env.INTERFACES_REF}}
 
-      - name: Configure ThunderInterfaces
+      - name: Build ThunderInterfaces
         if: steps.cache.outputs.cache-hit != 'true'
         run: >
           cmake
@@ -129,14 +115,10 @@ jobs:
           -B build/ThunderInterfaces
           -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/install/usr"
           -DCMAKE_MODULE_PATH="${{github.workspace}}/install/tools/cmake"
-
-      - name: Build ThunderInterfaces
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --build build/ThunderInterfaces -j8
-
-      - name: Install ThunderInterfaces
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: cmake --install build/ThunderInterfaces
+          &&
+          cmake --build build/ThunderInterfaces -j8
+          &&
+          cmake --install build/ThunderInterfaces
 
       - name: Checkout rdkservices
         uses: actions/checkout@v3
