--- a/TextToSpeech/test/CMakeLists.txt
+++ b/TextToSpeech/test/CMakeLists.txt
@@ -16,11 +16,7 @@
 # limitations under the License.
 
 set(PLUGIN_NAME TTSThunderAPITest)
-if (USE_THUNDER_R4)
-    find_package(${NAMESPACE}COM REQUIRED)
-else ()
-    find_package(${NAMESPACE}Protocols REQUIRED)
-endif (USE_THUNDER_R4)
+find_package(${NAMESPACE}Protocols REQUIRED)
 find_package(securityagent REQUIRED)
 
 option(PLUGIN_SECURITY_AGENT "Enable the Security Agent Features interface in javascript." OFF)
@@ -35,11 +31,10 @@ set_target_properties(${PLUGIN_NAME} PROPERTIES
 set(LIBRARIES WPEFrameworkSecurityUtil)
 target_include_directories(${PLUGIN_NAME} PRIVATE ../../helpers ../impl)
 
-if (USE_THUNDER_R4)
-target_link_libraries(${PLUGIN_NAME} PUBLIC ${LIBRARIES} PRIVATE ${NAMESPACE}COM::${NAMESPACE}COM ${NAMESPACE}WebSocket::${NAMESPACE}WebSocket)
-else ()
-target_link_libraries(${PLUGIN_NAME} PUBLIC ${LIBRARIES} PRIVATE ${NAMESPACE}Protocols::${NAMESPACE}Protocols)
-endif (USE_THUNDER_R4)
+target_link_libraries(${PLUGIN_NAME} PUBLIC ${LIBRARIES}
+    PRIVATE
+    ${NAMESPACE}Protocols::${NAMESPACE}Protocols
+    )
 
 install(TARGETS ${PLUGIN_NAME} DESTINATION bin)
 
